fix: Post Image BG Spacing issues

--- a/src/blocks/post/style.scss
+++ b/src/blocks/post/style.scss
@@ -238,7 +238,6 @@
 		position: relative;
 		z-index: 10;
 		overflow: hidden;
-		width: 100%;
 	}
 
 	.uagb-post__inner-wrap {
